--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Recipe_Manager C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Recipe_Manager main.c Types/Ingredient.c Types/Ingredient.h Types/Recipe.c Types/Recipe.h Types/MeasurementUnits.h)
+add_executable(Recipe_Manager main.c Types/Ingredient.c Types/Ingredient.h Utilities.c Utilities.h Types/Recipe.c Types/Recipe.h FileManager.c FileManager.h)
